# laba-oop-5

./: CMakeLists.txt  README.md  main.cpp
include/: my_memory_resource.h  queue.h
src/: CMakeLists.txt  my_мemory_resource.cpp
tests/: CMakeLists.txt  test_memory_resource.cpp  test_queue.cpp  test_queue_iterator.cpp
